--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "ejs": "2.3.3",
     "express": "4.13.3",
-    "crypto-js": "3.1.6"
+    "crypto-js": "3.1.6",
+    "body-parser": "1.15.0"
   },
   "engines": {
     "node": "0.12.7"
